extract github config form code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 
 server.port=8887
+github.client.id=dadd6fb1ebb7c8ec7ac7
+github.client.secret=c603b01cd107562379f5abcc0f8cf864554529e0
+github.redirect.url=http://localhost:8887/callback
